@@ -1,6 +1,6 @@
 /* NGVCard+SOGo.h - this file is part of SOGo
  *
- * Copyright (C) 2009-2014 Inverse inc.
+ * Copyright (C) 2009-2017 Inverse inc.
  *
  * This file is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -44,6 +44,10 @@
 - (NSString *) mobile;
 - (NSString *) pager;
 - (NSCalendarDate *) birthday;
+
+- (void) addElementWithTag: (NSString *) elementTag
+                    ofType: (NSString *) type
+                 withValue: (id) value;
 
 @end
 
