@@ -5,6 +5,7 @@ Enhancements
  - [core] improved event initation for all day events (#4145)
  - [core] now possible to {un}subscribe to folders using sogo-tool
  - [eas] added photo support for GAL search operations
+ - [web] added custom fields support from Thunderbird's address book
 
 Bug fixes
  - [core] fixed calendar component move across collections (#4116)
